<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculationView"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="right"
        android:hint="Enter expression"
        android:autoSizeMinTextSize="12dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeTextType="uniform"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_margin="10dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="12dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:gravity="right"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculationView"
        app:layout_constraintVertical_bias="0.051" />

    <LinearLayout
        android:id="@+id/parentLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultView"
        >

        <LinearLayout
            android:id="@+id/childLL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="2dp"
            app:layout_constraintStart_toStartOf="@id/parentLL"
            app:layout_constraintEnd_toEndOf="@id/parentLL"
            app:layout_constraintTop_toTopOf="@id/parentLL"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_bra"
                style="@style/operatorButton"
                android:text="@string/open_bra"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_bra"
                style="@style/operatorButton"
                android:text="@string/close_bra"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                style="@style/operatorButton"
                android:text="@string/c"
                android:textColor="@color/delete_red"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                style="@style/operatorButton"
                android:text="@string/plus"
                android:shadowColor="@color/black"
                />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/childLL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="2dp"
            app:layout_constraintStart_toStartOf="@id/parentLL"
            app:layout_constraintEnd_toEndOf="@id/parentLL"
            app:layout_constraintTop_toTopOf="@id/parentLL"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n7"
                style="@style/commonButton"
                android:text="@string/n7"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n8"
                style="@style/commonButton"
                android:text="@string/n8"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n9"
                style="@style/commonButton"
                android:text="@string/n9"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                style="@style/operatorButton"
                android:text="@string/minus"
                android:shadowColor="@color/black"
                />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/childLL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="2dp"
            app:layout_constraintStart_toStartOf="@id/parentLL"
            app:layout_constraintEnd_toEndOf="@id/parentLL"
            app:layout_constraintTop_toTopOf="@id/parentLL"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n4"
                style="@style/commonButton"
                android:text="@string/n4"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n5"
                style="@style/commonButton"
                android:text="@string/n5"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n6"
                style="@style/commonButton"
                android:text="@string/n6"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/prod"
                style="@style/operatorButton"
                android:text="@string/prod"
                android:shadowColor="@color/black"
                />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/childLL4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="2dp"
            app:layout_constraintStart_toStartOf="@id/parentLL"
            app:layout_constraintEnd_toEndOf="@id/parentLL"
            app:layout_constraintTop_toTopOf="@id/parentLL"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n1"
                style="@style/commonButton"
                android:text="@string/n1"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n2"
                style="@style/commonButton"
                android:text="@string/n2"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n3"
                style="@style/commonButton"
                android:text="@string/n3"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/div"
                style="@style/operatorButton"
                android:text="@string/div"
                android:shadowColor="@color/black"
                />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/childLL5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="2dp"
            app:layout_constraintStart_toStartOf="@id/parentLL"
            app:layout_constraintEnd_toEndOf="@id/parentLL"
            app:layout_constraintTop_toTopOf="@id/parentLL"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/period"
                style="@style/operatorButton"
                android:text="@string/period"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n0"
                style="@style/commonButton"
                android:text="@string/n0"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/all_cancel"
                style="@style/commonButton"
                android:text="@string/ac"
                android:textColor="@color/delete_red"
                android:shadowColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/equals"
                style="@style/commonButton"
                android:text="@string/equals"
                android:backgroundTint="@color/btnbg2"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>